# clion-sdl2-project

./: CMakeLists.txt  README.md  main.cpp
